logos out of box fix

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -139,9 +139,10 @@ ul.board{
   }
 
   .logo-box{
-    width: 100px;
+    width: 80%;
     height: 100px;
     display: grid;
+    justify-self: center;
   }
   
   .company-logo img {
@@ -149,6 +150,7 @@ ul.board{
     height: auto;
     align-self: center;
     justify-self: center;
+    max-height: 100%;
   }
   
   #contributions p {
