--- a/app/static/css/similar_stores.css
+++ b/app/static/css/similar_stores.css
@@ -34,6 +34,7 @@ h2 {
 #competitors li img {
   align-self: center;
   width: 50%;
+  max-height: 90%;
 }
 
 .competitor {
